- add custom field support to ZMManufacturers
- add support to load/update the account (price) group id
- changed the constructor signature of ZMCategories
- refactored ZMCategories (again!) to properly allow languageId as optional
  parameter;
- fixed bug in index controller that would not create an empty result list if
  the category is empty
- make ZMCategory have a proper default constructor

Release 0.8.6.1
- fix hardcoded tablename in ZMBanners; #1856664

Release 0.8.6
- added setting 'isAccountNickname' to control use of nickname in account
  creation
- removed ZMRuntime::isBBActive(); this requires a couple template changes;
  please refer to the default theme changes to see what needs to be done
- removed ZMRuntime::reconnectDB()
- removed all phpBB references (functions, nickname validation, controller
  code) plus the settings 'isEnablePHPBBLinks'
- fix nickname population in ZMAccount
- fix broken ZMView::getMappingId()
- populate nickname when loading accounts from db
- use user name/email address for contact us email sender details (so reply to
  email will reply to user, rather than the store email)
- fix missing crumbtrails when form submission fails 
- added new settings 'isEnableStock' and 'isAllowLowStockCheckout'
- do not use printf(..) if no parameters are given to replace '%s' or similar
- added generic properties support to ZMModel; this means it is is now
  possible to attach custom properties to all model classes
- add code to evaluate cPath directly rather than use zen-cart's code (not
  active yet)
- add support for init plugins (no loader support, so single file only please)
- added convenience method ZMCategory::getImageInfo()
- remove 'Popup ' prefix from popup window titles
- added coupon help popup
- fixed some PHP4 related coupon restriction issues
- removed dependency of ZMLanguages from zen-cart's languages class;
- added zm_get_browser_language() as described at: 